# simple_template_log_parser

./: CHANGELOG.MD  MANIFEST.in  README.md  pyproject.toml
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  template_log_parser.html
docs/_modules/: collections.html  index.html
docs/_modules/template_log_parser/: built_ins.html  column_functions.html  (+5 more)
docs/_sources/: index.rst.txt  modules.rst.txt  template_log_parser.rst.txt
template_log_parser/: __init__.py  built_ins.py  column_functions.py  definitions.py  log_functions.py  log_type_classes.py  sample.py  template_functions.py
template_log_parser/templates/: debian_templates.py  omada_templates.py  omv_templates.py  pfsense_templates.py  pihole_templates.py  synology_templates.py  ubuntu_templates.py
template_workflows/: kodi_workflow.py  omada_workflow.py  omv_workflow.py  pfsense_workflow.py  pihole_workflow.py  synology_workflow.py  ubuntu_workflow.py
template_workflows/functions/: column_functions.py  merge.py
template_workflows/templates/: debian.py  kodi.py  omada.py  omv.py  pfsense.py  pihole.py  synology.py  ubuntu.py
template_workflows/tests/: test_column_functions.py  test_kodi_workflow.py  test_merge.py  test_omada_workflow.py  test_omv_workflow.py  test_pfsense_workflow.py  test_pihole_workflow.py  test_synology_workflow.py  test_ubuntu_workflow.py
test/: resources.py  test.py  test_log_functions.py  test_log_type_classes.py  test_pre_process_functions.py  test_process_log.py  test_template_functions.py
(+2 files in other folders)
