[build-system]
requires = ["setuptools >= 82.0.1", "setuptools_scm>=10.0.5"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["template_log_parser"]

[project]
name = "template-log-parser"
version = "0.9.1"
dependencies = [
    "pandas>=2.0.0",
    "parse==1.22.0",
]
requires-python = ">=3.10"
authors = [
  {name = "Caleb Yourison", email = "caleb.yourison@gmail.com"},
]
description = "Parsing Log Files With User Defined Templates"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ['log', 'parse', 'template']
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3"
]

[project.urls]
homepage = "https://github.com/calebyourison/simple_template_log_parser"